--- a/CSS/style.css
+++ b/CSS/style.css
@@ -381,7 +381,7 @@ section.full-width-section {
     font-size: 3rem;
     font-weight: bold;
     color: white;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
 }
 .column-text p {
     font-size: 1rem;
